@@ -9,11 +9,12 @@ ppc64_extra_cflags = -O3 -g1
 ppc64_slibdir = /lib64
 ppc64_libdir = /usr/lib64
 ppc64_extra_config_options := $(extra_config_options) --disable-profile \
-	--includedir=/usr/include/ppc64-linux-gnu
+	--includedir=/usr/include/powerpc64-linux-gnu
 
 define libc6-dev-ppc64_extra_pkg_install
-mkdir -p debian/libc6-dev-ppc64/usr/include
-cp -af debian/tmp-ppc64/usr/include/ppc64-linux-gnu \
-        debian/libc6-dev-ppc64/usr/include
+mkdir -p debian/libc6-dev-ppc64/usr/include/gnu
+cp -af debian/tmp-ppc64/usr/include/powerpc64-linux-gnu/gnu/stubs-64.h \
+        debian/libc6-dev-ppc64/usr/include/gnu
+ln -sf /usr/include/ debian/libc6-dev-ppc64/usr/include/powerpc64-linux-gnu
 endef
 
